--- a/MPRT220416-LED_STRIP.FW.ioc
+++ b/MPRT220416-LED_STRIP.FW.ioc
@@ -40,17 +40,18 @@ Mcu.Name=STM32F103R(C-D-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PD0-OSC_IN
 Mcu.Pin1=PD1-OSC_OUT
-Mcu.Pin10=PA14
-Mcu.Pin11=PB3
+Mcu.Pin10=PA13
+Mcu.Pin11=PA14
+Mcu.Pin12=PB3
 Mcu.Pin2=PA3
 Mcu.Pin3=PA4
-Mcu.Pin4=PB10
-Mcu.Pin5=PB11
-Mcu.Pin6=PA8
-Mcu.Pin7=PA9
-Mcu.Pin8=PA10
-Mcu.Pin9=PA13
-Mcu.PinsNb=12
+Mcu.Pin4=PA6
+Mcu.Pin5=PB10
+Mcu.Pin6=PB11
+Mcu.Pin7=PA8
+Mcu.Pin8=PA9
+Mcu.Pin9=PA10
+Mcu.PinsNb=13
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103RETx
@@ -68,9 +69,6 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
-NVIC.TIM1_CC_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.TIM1_TRG_COM_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.TIM1_UP_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA10.Locked=true
 PA10.Mode=Asynchronous
@@ -89,6 +87,11 @@ PA4.GPIOParameters=GPIO_Label
 PA4.GPIO_Label=DBG_PERIOD_CLK
 PA4.Locked=true
 PA4.Signal=GPIO_Output
+PA6.Locked=true
+PA6.Signal=GPIO_Output
+PA8.GPIOParameters=GPIO_ModeDefaultPP,GPIO_Speed
+PA8.GPIO_ModeDefaultPP=GPIO_MODE_AF_OD
+PA8.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PA8.Signal=S_TIM1_CH1
 PA9.Locked=true
 PA9.Mode=Asynchronous
@@ -170,10 +173,11 @@ SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1
 SH.S_TIM1_CH1.ConfNb=1
 TIM1.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM1.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
-TIM1.IPParameters=Channel-PWM Generation1 CH1,AutoReloadPreload,Prescaler,Period,Pulse-PWM Generation1 CH1
-TIM1.Period=45000
-TIM1.Prescaler=1
-TIM1.Pulse-PWM\ Generation1\ CH1=11250
+TIM1.IPParameters=Channel-PWM Generation1 CH1,AutoReloadPreload,Prescaler,Period,Pulse-PWM Generation1 CH1,OCFastMode_PWM-PWM Generation1 CH1
+TIM1.OCFastMode_PWM-PWM\ Generation1\ CH1=TIM_OCFAST_ENABLE
+TIM1.Period=90
+TIM1.Prescaler=0
+TIM1.Pulse-PWM\ Generation1\ CH1=45
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 board=custom
