1 led frissitese megy de hibázik

--- a/MPRT220416-LED_STRIP.FW.ioc
+++ b/MPRT220416-LED_STRIP.FW.ioc
@@ -173,7 +173,8 @@ SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1
 SH.S_TIM1_CH1.ConfNb=1
 TIM1.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM1.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
-TIM1.IPParameters=Channel-PWM Generation1 CH1,AutoReloadPreload,Prescaler,Period,Pulse-PWM Generation1 CH1,OCFastMode_PWM-PWM Generation1 CH1
+TIM1.IPParameters=Channel-PWM Generation1 CH1,AutoReloadPreload,Prescaler,Period,Pulse-PWM Generation1 CH1,OCFastMode_PWM-PWM Generation1 CH1,OC1Preload_PWM
+TIM1.OC1Preload_PWM=DISABLE
 TIM1.OCFastMode_PWM-PWM\ Generation1\ CH1=TIM_OCFAST_ENABLE
 TIM1.Period=90
 TIM1.Prescaler=0
