project rename, documetation

--- a/MPRT220416-WS2812B.FW.ioc
+++ b/MPRT220416-WS2812B.FW.ioc
@@ -40,18 +40,19 @@ Mcu.Name=STM32F103R(C-D-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PD0-OSC_IN
 Mcu.Pin1=PD1-OSC_OUT
-Mcu.Pin10=PA13
-Mcu.Pin11=PA14
-Mcu.Pin12=PB3
+Mcu.Pin10=PA10
+Mcu.Pin11=PA13
+Mcu.Pin12=PA14
+Mcu.Pin13=PB3
 Mcu.Pin2=PA3
 Mcu.Pin3=PA4
-Mcu.Pin4=PA6
-Mcu.Pin5=PB10
-Mcu.Pin6=PB11
-Mcu.Pin7=PA8
-Mcu.Pin8=PA9
-Mcu.Pin9=PA10
-Mcu.PinsNb=13
+Mcu.Pin4=PA5
+Mcu.Pin5=PA6
+Mcu.Pin6=PB10
+Mcu.Pin7=PB11
+Mcu.Pin8=PA8
+Mcu.Pin9=PA9
+Mcu.PinsNb=14
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103RETx
@@ -84,9 +85,13 @@ PA3.GPIO_Label=LIVE_LED
 PA3.Locked=true
 PA3.Signal=GPIO_Output
 PA4.GPIOParameters=GPIO_Label
-PA4.GPIO_Label=DBG_PERIOD_CLK
+PA4.GPIO_Label=DIAG_LED_UPDT_CLK
 PA4.Locked=true
 PA4.Signal=GPIO_Output
+PA5.GPIOParameters=GPIO_Label
+PA5.GPIO_Label=DIAG_LED_STRING_UPDT_CLK
+PA5.Locked=true
+PA5.Signal=GPIO_Output
 PA6.Locked=true
 PA6.Signal=GPIO_Output
 PA8.GPIOParameters=GPIO_ModeDefaultPP,GPIO_Speed
@@ -132,8 +137,8 @@ ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=MPRT220416-LED_STRIP.FW.ioc
-ProjectManager.ProjectName=MPRT220416-LED_STRIP.FW
+ProjectManager.ProjectFileName=MPRT220416-WS2812B.FW.ioc
+ProjectManager.ProjectName=MPRT220416-WS2812B.FW
 ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
