--- a/MPRT220416-WS2812B.FW.ioc
+++ b/MPRT220416-WS2812B.FW.ioc
@@ -2,27 +2,17 @@
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
-Dma.Request0=USART1_RX
-Dma.Request1=TIM1_CH1
-Dma.RequestsNb=2
-Dma.TIM1_CH1.1.Direction=DMA_MEMORY_TO_PERIPH
-Dma.TIM1_CH1.1.Instance=DMA1_Channel2
-Dma.TIM1_CH1.1.MemDataAlignment=DMA_MDATAALIGN_WORD
-Dma.TIM1_CH1.1.MemInc=DMA_MINC_ENABLE
-Dma.TIM1_CH1.1.Mode=DMA_NORMAL
-Dma.TIM1_CH1.1.PeriphDataAlignment=DMA_PDATAALIGN_WORD
-Dma.TIM1_CH1.1.PeriphInc=DMA_PINC_DISABLE
-Dma.TIM1_CH1.1.Priority=DMA_PRIORITY_LOW
-Dma.TIM1_CH1.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
-Dma.USART1_RX.0.Direction=DMA_PERIPH_TO_MEMORY
-Dma.USART1_RX.0.Instance=DMA1_Channel5
-Dma.USART1_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.USART1_RX.0.MemInc=DMA_MINC_ENABLE
-Dma.USART1_RX.0.Mode=DMA_NORMAL
-Dma.USART1_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.USART1_RX.0.PeriphInc=DMA_PINC_DISABLE
-Dma.USART1_RX.0.Priority=DMA_PRIORITY_LOW
-Dma.USART1_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.Request0=TIM1_CH1
+Dma.RequestsNb=1
+Dma.TIM1_CH1.0.Direction=DMA_MEMORY_TO_PERIPH
+Dma.TIM1_CH1.0.Instance=DMA1_Channel2
+Dma.TIM1_CH1.0.MemDataAlignment=DMA_MDATAALIGN_WORD
+Dma.TIM1_CH1.0.MemInc=DMA_MINC_ENABLE
+Dma.TIM1_CH1.0.Mode=DMA_NORMAL
+Dma.TIM1_CH1.0.PeriphDataAlignment=DMA_PDATAALIGN_WORD
+Dma.TIM1_CH1.0.PeriphInc=DMA_PINC_DISABLE
+Dma.TIM1_CH1.0.Priority=DMA_PRIORITY_LOW
+Dma.TIM1_CH1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
@@ -34,8 +24,7 @@ Mcu.IP2=NVIC
 Mcu.IP3=RCC
 Mcu.IP4=SYS
 Mcu.IP5=TIM1
-Mcu.IP6=USART1
-Mcu.IPNb=7
+Mcu.IPNb=6
 Mcu.Name=STM32F103R(C-D-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PD0-OSC_IN
@@ -44,6 +33,7 @@ Mcu.Pin10=PA10
 Mcu.Pin11=PA13
 Mcu.Pin12=PA14
 Mcu.Pin13=PB3
+Mcu.Pin14=VP_SYS_VS_Systick
 Mcu.Pin2=PA3
 Mcu.Pin3=PA4
 Mcu.Pin4=PA5
@@ -52,7 +42,7 @@ Mcu.Pin6=PB10
 Mcu.Pin7=PB11
 Mcu.Pin8=PA8
 Mcu.Pin9=PA9
-Mcu.PinsNb=14
+Mcu.PinsNb=15
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103RETx
@@ -60,7 +50,6 @@ MxCube.Version=6.15.0
 MxDb.Version=DB.6.0.150
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DMA1_Channel2_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
-NVIC.DMA1_Channel5_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -72,7 +61,6 @@ NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA10.Locked=true
-PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
 PA13.Locked=true
 PA13.Mode=Trace_Asynchronous_SW
@@ -99,7 +87,6 @@ PA8.GPIO_ModeDefaultPP=GPIO_MODE_AF_OD
 PA8.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PA8.Signal=S_TIM1_CH1
 PA9.Locked=true
-PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
 PB10.Locked=true
 PB10.Mode=I2C
@@ -185,7 +172,7 @@ TIM1.OCFastMode_PWM-PWM\ Generation1\ CH1=TIM_OCFAST_DISABLE
 TIM1.Period=90
 TIM1.Prescaler=0
 TIM1.Pulse-PWM\ Generation1\ CH1=45
-USART1.IPParameters=VirtualMode
-USART1.VirtualMode=VM_ASYNC
+VP_SYS_VS_Systick.Mode=SysTick
+VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=custom
 isbadioc=false
