--- a/MPRT220416-WS2812B.FW.ioc
+++ b/MPRT220416-WS2812B.FW.ioc
@@ -83,7 +83,7 @@ PA5.Signal=GPIO_Output
 PA6.Locked=true
 PA6.Signal=GPIO_Output
 PA8.GPIOParameters=GPIO_ModeDefaultPP,GPIO_Speed
-PA8.GPIO_ModeDefaultPP=GPIO_MODE_AF_OD
+PA8.GPIO_ModeDefaultPP=GPIO_MODE_AF_PP
 PA8.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PA8.Signal=S_TIM1_CH1
 PA9.Locked=true
@@ -135,7 +135,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_I2C2_Init-I2C2-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_I2C2_Init-I2C2-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true
 RCC.ADCFreqValue=36000000
 RCC.AHBFreq_Value=72000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
